# connectFourProject

./: README.md  pyproject.toml
src/: Connect4Env.py  test.py
