[tool.poetry]
name = "connect_four_project"
version = "0.1.0"
description = ""
authors = ["Alexander Jones <alexander.humbug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ray = {extras = ["rllib"], version = "^2.8.0"}
pettingzoo = "^1.22.4"
pygame = "^2.3.0"

[build-system]
requires = ["poetry-core", "swig"]
build-backend = "poetry.core.masonry.api"